[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tcod-clock"
authors = [{ name = "Kyle Benesch", email = "4b796c65+github@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version", "description"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.2.0", "pytest-cov", "mypy>=0.991", "tcod>=14.0.0"]

[tool.flit.module]
name = "tcod.clock"

[project.urls]
Home = "https://github.com/HexDecimal/python-tcod-clock"
Changelog = "https://github.com/HexDecimal/python-tcod-clock/blob/main/CHANGELOG.md"
Documentation = "https://python-tcod-clock.readthedocs.io"
Source = "https://github.com/HexDecimal/python-tcod-clock"

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
target-version = ["py38"]
line-length = 120

[tool.isort] # https://pycqa.github.io/isort/docs/configuration/options.html
py_version = "38"
line_length = 120
profile = "black"
skip_gitignore = true

[tool.mypy] # https://mypy.readthedocs.io/en/stable/config_file.html
files = "**/*.py"
explicit_package_bases = true
python_version = "3.8"
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
required_plugins = "pytest-cov>=4.0.0"
addopts = "--doctest-modules --cov=tcod"
testpaths = ["tcod"]
